# booky

./: .gitignore  README.md  booky.py  booky.rkt  configure.toml  convert.rkt  dbms.rkt  example.rkt  format-table.rkt  publication.rkt  publication.toml  publications1.toml  publications2.toml  pyproject.toml  tickets.rkt
booky/: __main__.py  config.py  display.py  messages.py  publication.py  ticket.py  validation.py
booky_old/: 220224.rkt  README.md  booklet-test-1.rkt  booklet-test-2.rkt  booklet-test-3.rkt  booklet-test-4.rkt  booky.rkt  example2.rkt  example3.rkt  publication.rkt
sample-project/: booklet-example.toml  booklet-test-1.toml  booklet-test-2.toml  booklet-test-3.toml  booklet-test-4.toml  configure.toml  pubs.toml  tickets-example.toml
